<resources>
    <string name="app_name">garageSale</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="e_mail">이메일</string>
    <string name="nickname">닉네임</string>
    <string name="password">비밀번호</string>
    <string name="re_password">비밀번호 확인</string>
    <string name="login">로그인</string>
    <string name="google_login">구글 계정으로 로그인</string>
    <string name="join">회원가입</string>

</resources>
