<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/background">

            <TextView
                android:id="@+id/textView2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="잘못 입력되었어요!"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                >
            </TextView>

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/e_mail"
                android:textColorHint="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="130dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="textEmailAddress"
                android:theme="@style/Theme.App.Base"
                />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nickname"
                android:textColorHint="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_below="@+id/emailEditText"
                android:inputType="textPersonName"
                android:theme="@style/Theme.App.Base"
                />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_below="@+id/nameEditText"
                android:inputType="textPassword"
                android:theme="@style/Theme.App.Base"
                />

            <EditText
                android:id="@+id/confirmEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/re_password"
                android:textColorHint="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_below="@+id/passwordEditText"
                android:inputType="textPassword"
                android:theme="@style/Theme.App.Base"
                />

            <Button
                android:id="@+id/joinButton"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_below="@id/confirmEditText"
                android:text="@string/join"
                android:background="@drawable/round_corner_button"
                />

</RelativeLayout>

</layout>